...
@Preview
@Composable
private fun SearchResultsListPreview() {
    SearchResultsList(
        searchResults =
            listOf(
                SearchResult("London, UK", "London", 51.5074, -0.1278, "United Kingdom"),
                SearchResult("London, Ontario, Canada", "London", 42.9849, -81.2453, "Canada", "Ontario"),
                SearchResult("New London, CT, USA", "New London", 41.3556, -72.0995, "United States", "Connecticut"),
                SearchResult("Paris, France", "Paris", 48.8566, 2.3522, "France"),
                SearchResult("Paris, TX, USA", "Paris", 33.6609, -95.5555, "United States", "Texas"),
            ),
        onLocationSelected = {},
    )
...
