...
@Composable
private fun WeatherSuccessScreenDayPreview() {
    TempestTheme {
        WeatherSuccessScreen(
            weatherDescription = "Clear sky",
            formattedLocation = "London, UK",
            formattedTemperature = "22°C",
            currentWeatherIconUrl = "https://openweathermap.org/img/wn/01d@2x.png",
            currentWeatherIconDescription = "clear sky",
            todaysHourlyForecast =
                listOf(
                    HourlyWeatherUiModel(
                        formattedTime = "14:00",
...
                        precipitationProbability = "10%",
                    ),
                ),
            weeklyForecast =
                listOf(
                    DailyWeatherUiModel(
                        formattedDay = "Mon",
                        temperatureHigh = "25°C",
                        temperatureLow = "15°C",
                        iconUrl = "https://openweathermap.org/img/wn/01d@2x.png",
                        iconDescription = "clear sky",
                    ),
                    DailyWeatherUiModel(
...
